# sequoiadb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/sdb-aggr/: Cargo.toml
crates/sdb-aggr/src/: lib.rs  pipeline.rs  stage.rs
crates/sdb-auth/: Cargo.toml
crates/sdb-auth/src/: auth_manager.rs  lib.rs  role.rs  user.rs
crates/sdb-bson/: Cargo.toml
crates/sdb-bson/src/: builder.rs  decode.rs  document.rs  element.rs  encode.rs  error.rs  lib.rs  raw.rs  types.rs
crates/sdb-bson/tests/: proptest_roundtrip.rs  roundtrip.rs
crates/sdb-cat/: Cargo.toml
crates/sdb-cat/src/: catalog.rs  lib.rs  metadata.rs  service.rs
crates/sdb-client/: Cargo.toml
crates/sdb-client/src/: client.rs  collection.rs  cursor.rs  lib.rs  options.rs
crates/sdb-client/tests/: integration.rs
crates/sdb-cls/: Cargo.toml
crates/sdb-cls/src/: election.rs  lib.rs  replication.rs  service.rs  shard.rs
crates/sdb-common/: Cargo.toml
crates/sdb-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/sdb-coord/: Cargo.toml
crates/sdb-coord/src/: lib.rs  router.rs  service.rs  session.rs
crates/sdb-dms/: Cargo.toml
crates/sdb-dms/src/: delete_list.rs  engine.rs  extent.rs  lib.rs  page.rs  record.rs  storage_unit.rs
crates/sdb-dps/: Cargo.toml
crates/sdb-dps/src/: checksum.rs  format.rs  iter.rs  lib.rs  log_record.rs  transaction.rs  wal.rs
crates/sdb-ixm/: Cargo.toml
crates/sdb-ixm/src/: btree.rs  cursor.rs  definition.rs  key.rs  lib.rs  node.rs
crates/sdb-mon/: Cargo.toml
crates/sdb-mon/src/: lib.rs  metrics.rs  snapshot.rs
crates/sdb-msg/: Cargo.toml
crates/sdb-msg/src/: codec.rs  header.rs  lib.rs  opcode.rs  reply.rs  request.rs
crates/sdb-mth/: Cargo.toml
crates/sdb-mth/src/: compare.rs  expression.rs  lib.rs  matcher.rs  modifier.rs
crates/sdb-net/: Cargo.toml
crates/sdb-net/src/: connection.rs  frame.rs  handler.rs  lib.rs  route.rs
crates/sdb-opt/: Cargo.toml
crates/sdb-opt/src/: access_path.rs  cost.rs  index_match.rs  lib.rs  optimizer.rs  plan.rs  stats.rs
crates/sdb-rest/: Cargo.toml
crates/sdb-rest/src/: convert.rs  main.rs
crates/sdb-rest/src/routes/: collections.rs  databases.rs  documents.rs  indexes.rs  mod.rs  sql.rs  status.rs
crates/sdb-rest/src/ui/: mod.rs
crates/sdb-rest/static/: index.html
crates/sdb-rtn/: Cargo.toml
crates/sdb-rtn/src/: context.rs  cursor.rs  executor.rs  lib.rs
crates/sdb-sched/: Cargo.toml
crates/sdb-sched/src/: lib.rs  scheduler.rs  task.rs
crates/sdb-server/: Cargo.toml
crates/sdb-server/benches/: throughput.rs
crates/sdb-server/src/: catalog_handler.rs  coord_handler.rs  cursor_manager.rs  data_node_client.rs  data_store.rs  handler.rs  lib.rs  main.rs
crates/sdb-server/tests/: integration.rs
crates/sdb-sql/: Cargo.toml
crates/sdb-sql/src/: ast.rs  lib.rs  parser.rs  qgm.rs
docs/: architecture.md  authentication.md  configuration.md  index-engine.md  query-engine.md  quickstart.md  replication.md  sharding.md  storage-engine.md  wal-and-transactions.md  wire-protocol.md
drivers/java/: pom.xml
drivers/java/src/main/java/com/sequoiadb/driver/: CollectionSpace.java  ConnectOptions.java  DBCollection.java  DBCursor.java  SdbClient.java  SdbException.java
drivers/java/src/main/java/com/sequoiadb/driver/protocol/: BsonHelper.java  Codec.java  MsgHeader.java  MsgOpDelete.java  MsgOpGetMore.java  MsgOpInsert.java  MsgOpKillContexts.java  MsgOpQuery.java  MsgOpReply.java  MsgOpUpdate.java  OpCode.java
drivers/java/src/test/java/com/sequoiadb/driver/: SdbClientTest.java  TestServer.java
drivers/java/src/test/java/com/sequoiadb/driver/protocol/: CodecTest.java  MessagesTest.java  MsgHeaderTest.java  MsgOpReplyTest.java
drivers/python/: pyproject.toml
drivers/python/sequoiadb/: __init__.py  client.py  collection.py  collection_space.py  constants.py  cursor.py  error.py
drivers/python/sequoiadb/protocol/: __init__.py  codec.py  header.py  messages.py  opcodes.py  reply.py
drivers/python/tests/: conftest.py  test_codec.py  test_header.py  test_integration.py  test_messages.py  test_reply.py
