[package]
name = "sdb-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client driver for SequoiaDB-RS"

[dependencies]
sdb-bson = { workspace = true }
sdb-common = { workspace = true }
sdb-msg = { workspace = true }
sdb-net = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[features]
default = []
tls = ["sdb-net/tls", "tokio-rustls", "rustls-pemfile"]

[dev-dependencies]
sdb-cat = { workspace = true }
sdb-server = { workspace = true }
