[package]
name = "sdb-dms"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage engine: page management, extents, data files"

[dependencies]
sdb-bson = { workspace = true }
sdb-common = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
