[package]
name = "sdb-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async network layer for SequoiaDB-RS"

[dependencies]
sdb-msg = { workspace = true }
sdb-common = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile"]
