[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sequoiadb"
version = "0.1.0"
description = "SequoiaDB Python driver"
requires-python = ">=3.10"
dependencies = [
    "pymongo>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
